--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "A Slack bot that sends reminders to people on a rota.",
     "main": "index.js",
     "scripts": {
-        "start": "npm run build:live",
+        "prestart": "npm run build && func extensions install",
+        "start:host": "func start",
+        "start": "npm run start:host & npm run watch",
+        "build:production": "npm run prestart && npm prune --production",
         "build": "tsc -p .",
-        "build:live": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
+        "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
@@ -19,6 +22,7 @@
         "@slack/bolt": "^1.2.0"
     },
     "devDependencies": {
+        "@azure/functions": "^1.0.3",
         "@types/node": "^12.7.2",
         "nodemon": "^1.19.1",
         "ts-node": "^8.3.0",
