--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "license": "ISC",
     "dependencies": {
         "@slack/events-api": "^2.3.0",
-        "@slack/web-api": "^5.1.0"
+        "@slack/web-api": "^5.1.0",
+        "@types/request-promise-native": "^1.0.16",
+        "request": "^2.88.0",
+        "request-promise-native": "^1.0.7"
     },
     "devDependencies": {
         "@azure/functions": "^1.0.3",
